--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <section class="header">
         <h1 class="display-5 mb-0">E-PDF</h1>
         <p class="lead mt-0">Your complete PDF toolkit</p>
