--- a/templates/split_result.html
+++ b/templates/split_result.html
@@ -49,7 +49,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="card">
