added BytesIO for virtual memory instead of os

--- a/templates/view_pdf.html
+++ b/templates/view_pdf.html
@@ -66,7 +66,7 @@
                         </a>
                     </div>
 
-                    <iframe src="{{ pdf_url }}" class="pdf-viewer" title="PDF Viewer"></iframe>
+                    <iframe src="{{ url }}" class="pdf-viewer" title="PDF Viewer"></iframe>
                 </div>
             </div>
         </div>
