--- a/templates/base.html
+++ b/templates/base.html
@@ -24,5 +24,8 @@
     
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     {% block js %}{% endblock %}
+    <footer>
+        <p><b><i>Ethen-Tech</i></b></p>
+    </footer>
 </body>
 </html>
