--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,7 @@
                 <a href="{{ url_for('read_pdf') }}" class="btn btn-primary feature-btn">
                     <i class="bi bi-file-pdf"></i> Read PDF
                 </a>
+                <p><b><span style="color: red;">NB: </span>Feature may not work, soon to be removed.</b></p>
             </div>
         </div>
         <div class="col-md-4 mb-4">
