--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
     {% block js %}{% endblock %}
     <footer>
-        <p><b><i>Ethen-Tech</i></b></p>
+        <p class="text-center"><b><i>Ethen-Tech</i></b></p>
     </footer>
 </body>
 </html>
